Criado testes para solicitação de bolo.
